# lunabot_ros2_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  (+4 more)
log/: latest_build  latest_test
notebook/: Home.md  PARA.md
notebook/1 - Projects/: Autonomy_Nav2.md  Competition_2026.md
notebook/2 - Areas/: Dashboard.md  Localization.md  Motor_Control.md  Robot_Description.md  Sensor_Integration.md
notebook/3 - Resources/: Architecture.md  Build_and_Run.md  Hardware_Reference.md
notebook/4 - Archives/: README.md
src/Seans Stuff/: Sean1.txt
src/dashboard/: .app.js.swp  CHANGELOG.md  app.js  index.html
src/lunabot_autonomy/: package.xml  setup.cfg  setup.py
src/lunabot_autonomy/config/: nav2_params.yaml  slam_params.yaml
src/lunabot_autonomy/lunabot_autonomy/: mission_node.py
src/lunabot_bringup/: package.xml  setup.cfg  setup.py
src/lunabot_bringup/launch/: lunabot_full.launch.py
src/lunabot_description/: CMakeLists.txt
src/lunabot_description/urdf/: lunabot.urdf
src/lunabot_motor_control/: package.xml  setup.cfg  setup.py
src/lunabot_motor_control/lunabot_motor_control/: motor_control_node.py  odometry_node.py
src/point_lio_ros2/install/: local_setup.sh  setup.sh
src/point_lio_ros2/launch/: mapping_unilidar_l1.launch.py  slam.launch.py
src/point_lio_ros2/log/: latest_build
src/shreejan/: code for wheel control.txt
(+267 files in other folders)
