<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_bringup</name>
  <version>0.1.0</version>
  <description>Lunabot top-level bringup — launches everything for full autonomy</description>
  <maintainer email="team@lunabot.local">Lunabot Team</maintainer>
  <license>MIT</license>

  <exec_depend>lunabot_description</exec_depend>
  <exec_depend>lunabot_motor_control</exec_depend>
  <exec_depend>lunabot_autonomy</exec_depend>
  <exec_depend>point_lio_ros2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
